# stocks

./: .dockerignore  .flake8  .gitignore  LICENSE.md  README.md  docker-compose.yml  logging.conf  logging.yaml  pyproject.toml
app/api/: api.py  dependencies.py  main.py
app/api/endpoints/: health_check.py  query.py  search.py
app/core/business_logic_layer/: assets.py  messages.py
app/core/settings/: settings.py
app/core/sockets/: binance_listener.py  stocks_client.py  stocks_server.py
app/core/utils/: directory_tree.py
app/crud/: base.py  in_memory_base.py  redis_base.py
app/db/: redis.py
app/schemas/: symbols.py
app/schemas/grafana/: datapoints.py  queries.py
assets/: sequence_diagram.txt
scripts/: format.cmd  format.sh  stop.sh
volumes/grafana/: grafana.db
volumes/redis/: redis.conf
