[tool.poetry]
name = "stocks"
version = "0.0.1"
description = "Stocks"
authors = ["Radmir Arslanov <radmir.a.arslanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
pydantic = "^1.8.2"
uvicorn = "^0.14.0"
python-decouple = "^3.4"
websockets = "^9.1"
aioredis = "^2.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.2"
mypy = "^0.910"
pytest = "^6.2.4"
requests = "^2.26.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 78

[tool.black]
line-length = 78
target-version = ["py38"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
plugins = ["pydantic.mypy",]
disallow_untyped_defs = true
