[tool.poetry]
name = "stocks"
version = "0.0.1"
description = "Stocks"
authors = ["Radmir Arslanov <radmir.a.arslanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aioredis=""
charset-normalizer=""
fastapi = ""
gunicorn = ""
pydantic = ""
python-decouple = ""
uvicorn = ""
websockets = ""


[tool.poetry.dev-dependencies]
autoflake = ""
black = ""
flake8 = ""
isort = ""
mypy = ""
pytest = ""
requests = ""

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 78

[tool.black]
line-length = 78
target-version = ["py39"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.9
plugins = ["pydantic.mypy",]
disallow_untyped_defs = true
